@@ -4,6 +4,8 @@ lintian-brush (0.46) UNRELEASED; urgency=medium
     because of false positives, effectively disabling it. Partially addresses
     #946398
   * Don't drop autoreconf if we can't upgrade debhelper beyond 9.
+  * Prevent unnecessary includes of /usr/share/dpkg/architecture.mk.
+    Closes: #946414
 
  -- Jelmer Vernooĳ <jelmer@debian.org>  Sun, 08 Dec 2019 15:33:27 +0000
 
